# robox

./: LICENSE  README.md
robox_bke/: platformio.ini
robox_bke/assets/sounds/: player_index.md
robox_bke/include/: Board.h  Game.h  Square.h  config.h  sounds.h
robox_bke/src/: Board.cpp  Game.cpp  Square.cpp  main.cpp
robox_control_ui/: .gitignore  CMakeLists.txt  README.md
robox_control_ui/include/base/: Controller.h  FrameBuilder.h  MainApplication.h
robox_control_ui/include/config/: bke_locations.h  global_config.h  msg_protocol.h
robox_control_ui/include/driver/: BKEDriver.h  DataManager.h  RobotController.h  RobotDriver.h  SerialDriver.h
robox_control_ui/include/frame/: BKECtrl.h  FrameInterface.h  MainFrame.h  ManualCtrl.h  RobotDrawPanel.h
robox_control_ui/include/logger/: LogMessage.h  LogToConsole.h  LogToWidget.h  Logger.h  LoggerInterface.h
robox_control_ui/include/utils/: BKEStrategy.h  Bitmap.h  Kinematics.h  Point.h  String.h  UpdateTimer.h
robox_control_ui/include/widgets/: ConcreteMessagePanels.h  DrawPanel.h  LogMessagePanel.h  LogPanel.h  ScrolledLogWindow.h
robox_control_ui/lib/serial/: AsyncSerial.cpp  AsyncSerial.h
robox_control_ui/src/: BKECtrl.cpp  BKEDriver.cpp  BKEStrategy.cpp  ConcreteMessagePanels.cpp  Controller.cpp  DataManager.cpp  DrawPanel.cpp  FrameBuilder.cpp  Kinematics.cpp  LogMessagePanel.cpp  LogPanel.cpp  LogToConsole.cpp  LogToWidget.cpp  Logger.cpp  MainApplication.cpp  MainFrame.cpp  ManualCtrl.cpp  RobotController.cpp  RobotDrawPanel.cpp  RobotDriver.cpp  ScrolledLogWindow.cpp  SerialDriver.cpp  UpdateTimer.cpp  main.cpp
robox_control_ui_v0.1/: CMakeLists.txt
robox_control_ui_v0.1/include/base/: FrameBuilder.h
robox_control_ui_v0.1/include/config/: global_config.h
robox_control_ui_v0.1/include/driver/: SerialDriver.h
robox_control_ui_v0.1/include/logger/: LogToConsole.h  Logger.h
robox_control_ui_v0.1/include/utils/: Kinematics.h  Point.h  String.h
robox_control_ui_v0.1/include/widgets/: DrawPanel.h
robox_control_ui_v0.1/src/: DataManager.cpp  DrawPanel.cpp  Logger.cpp  MainApplication.cpp  MainFrame.cpp  ManualCtrl.cpp  RobotController.cpp  RobotDriver.cpp  SerialDriver.cpp
robox_firmware/: .gitignore  README.md
robox_firmware/include/base/: Robot.h  States.h
robox_firmware/include/communication/: Reader.h
robox_firmware/include/config/: config.h
robox_firmware/include/device/: Actuator.h  AxialActuator.h  LinearActuator.h
robox_firmware/include/state_machine/: Context.h  Event.h
robox_firmware/include/utils/: CircularBuffer.h  Logger.h  Time.h
robox_firmware/src/: Actuator.cpp  AxialActuator.cpp  CircularBuffer.cpp  Config.cpp  Context.cpp  DataMenagement.cpp  HallSensor.cpp  LinearActuator.cpp  Machine.cpp  Message.cpp  Reader.cpp  Robot.cpp  States.cpp
robox_firmware_v0.1/include/base/: Machine.h
robox_firmware_v0.1/include/communication/: DataMenagement.h  Message.h
robox_firmware_v0.1/include/config/: msg_protocol.h
robox_firmware_v0.1/src/: AxialActuator.cpp  DataMenagement.cpp  Event.cpp  LinearActuator.cpp  Logger.cpp  main.cpp
robox_models/: README.md
robox_models/gripper/: connector.stl  magnet_bracket.stl  nut_holder.stl
(+110 files in other folders)
